# llm-with-docs

./: .gitignore  README.md  main.ipynb  pyproject.toml
data/: black-friday-deals.md
