[project]
name = "main"
description = "LLM with context proof-of-concept"
requires-python = ">=3.9,<4.0"
readme = { content-type = "text/markdown", file = "README.md" }
keywords = ["python"]
dynamic = ["version"]
license = { file = "LICENSE" }
authors = [{ name = "Vaidas" }]

[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^7.0.6"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
langchain = "^0.0.340"
openai = "^1.3.5"
tiktoken = "^0.5.1"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
scipy = "^1.11.4"
gradio = "^4.7.1"
chromadb = "^0.4.18"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.eggs
  |\.sh
  |\.tox
  |\.git
  |\.ini
  |\.pytest_cache
  |\.mypy_cache
  |\.venv
  |build
  |dist
  |Dockerfile
  |Jenkinfile
  |node_modules
  |migrations
)/
'''

[tool.isort]
profile = 'black'
skip_gitignore = true
skip = 'migrations'
[tool.coverage]
[tool.coverage.run]
omit = ['tests']
[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover',
    "if __name__ == '__main__':",
]

[tool.mypy]
python_version = '3.11'
allow_redefinition = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
strict_optional = true
incremental = true
warn_redundant_casts = true
warn_unused_configs = true
local_partial_types = true
show_traceback = true
exclude = 'migrations/'
strict = true

[tool.pylint.MASTER]
ignore = ".git,.venv,.vscode"

[tool.pylint.FORMAT]
max-line-length = 119
ignore-long-lines = '^\s*(# )?((<?https?://\S+>?)|(\.\. \w+: .*))$'
single-line-if-stmt = "no"
max-module-lines = 1000
indent-string = "    "

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring

    # Handled by ruff
    # Ref: <https://github.com/astral-sh/ruff/issues/970>
    "await-outside-async",                # PLE1142
    "bad-str-strip-call",                 # PLE1310
    "bad-string-format-type",             # PLE1307
    "bidirectional-unicode",              # PLE2502
    "continue-in-finally",                # PLE0116
    "duplicate-bases",                    # PLE0241
    "format-needs-mapping",               # F502
    "function-redefined",                 # F811
    "invalid-all-format",                 # PLE0605
    "invalid-all-object",                 # PLE0604
    "invalid-character-backspace",        # PLE2510
    "invalid-character-esc",              # PLE2513
    "invalid-character-nul",              # PLE2514
    "invalid-character-sub",              # PLE2512
    "invalid-character-zero-width-space", # PLE2515
    "logging-too-few-args",               # PLE1206
    "logging-too-many-args",              # PLE1205
    "missing-format-string-key",          # F524
    "mixed-format-string",                # F506
    "no-method-argument",                 # N805
    "no-self-argument",                   # N805
    "nonexistent-operator",               # B002
    "nonlocal-without-binding",           # PLE0117
    "not-in-loop",                        # F701, F702
    "notimplemented-raised",              # F901
    "return-in-init",                     # PLE0101
    "return-outside-function",            # F706
    "syntax-error",                       # E999
    "too-few-format-args",                # F524
    "too-many-format-args",               # F522
    "too-many-star-expressions",          # F622
    "truncated-format-string",            # F501
    "undefined-all-variable",             # F822
    "undefined-variable",                 # F821
    "used-prior-global-declaration",      # PLE0118
    "yield-inside-async-function",        # PLE1700
    "yield-outside-function",             # F704
    "anomalous-backslash-in-string",      # W605
    "assert-on-string-literal",           # PLW0129
    "assert-on-tuple",                    # F631
    "bad-format-string",                  # W1302, F
    "bad-format-string-key",              # W1300, F
    "bare-except",                        # E722
    "binary-op-exception",                # PLW0711
    "cell-var-from-loop",                 # B023
    # "dangerous-default-value", # B006, ruff catches new occurrences, needs more work
    "duplicate-except",                     # B014
    "duplicate-key",                        # F601
    "duplicate-string-formatting-argument", # F
    "duplicate-value",                      # F
    "eval-used",                            # PGH001
    "exec-used",                            # S102
    # "expression-not-assigned", # B018, ruff catches new occurrences, needs more work
    "f-string-without-interpolation",      # F541
    "forgotten-debug-statement",           # T100
    "format-string-without-interpolation", # F
    # "global-statement", # PLW0603, ruff catches new occurrences, needs more work
    "global-variable-not-assigned",  # PLW0602
    "implicit-str-concat",           # ISC001
    "import-self",                   # PLW0406
    "inconsistent-quotes",           # Q000
    "invalid-envvar-default",        # PLW1508
    "keyword-arg-before-vararg",     # B026
    "logging-format-interpolation",  # G
    "logging-fstring-interpolation", # G
    "logging-not-lazy",              # G
    "misplaced-future",              # F404
    "named-expr-without-context",    # PLW0131
    "nested-min-max",                # PLW3301
    # "pointless-statement", # B018, ruff catches new occurrences, needs more work
    "raise-missing-from", # TRY200
    # "redefined-builtin", # A001, ruff is way more stricter, needs work
    "try-except-raise",                  # TRY302
    "unused-argument",                   # ARG001, we don't use it
    "unused-format-string-argument",     #F507
    "unused-format-string-key",          # F504
    "unused-import",                     # F401
    "unused-variable",                   # F841
    "useless-else-on-loop",              # PLW0120
    "wildcard-import",                   # F403
    "bad-classmethod-argument",          # N804
    "consider-iterating-dictionary",     # SIM118
    "empty-docstring",                   # D419
    "invalid-name",                      # N815
    "line-too-long",                     # E501, disabled globally
    "missing-class-docstring",           # D101
    "missing-final-newline",             # W292
    "missing-function-docstring",        # D103
    "missing-module-docstring",          # D100
    "multiple-imports",                  #E401
    "singleton-comparison",              # E711, E712
    "subprocess-run-check",              # PLW1510
    "superfluous-parens",                # UP034
    "ungrouped-imports",                 # I001
    "unidiomatic-typecheck",             # E721
    "unnecessary-direct-lambda-call",    # PLC3002
    "unnecessary-lambda-assignment",     # PLC3001
    "unneeded-not",                      # SIM208
    "useless-import-alias",              # PLC0414
    "wrong-import-order",                # I001
    "wrong-import-position",             # E402
    "comparison-of-constants",           # PLR0133
    "comparison-with-itself",            # PLR0124
    "consider-merging-isinstance",       # PLR1701
    "consider-using-dict-comprehension", # C402
    "consider-using-generator",          # C417
    "consider-using-get",                # SIM401
    "consider-using-set-comprehension",  # C401
    "consider-using-sys-exit",           # PLR1722
    "consider-using-ternary",            # SIM108
    "literal-comparison",                # F632
    "property-with-parameters",          # PLR0206
    "super-with-arguments",              # UP008
    "too-many-branches",                 # PLR0912
    "too-many-return-statements",        # PLR0911
    "too-many-statements",               # PLR0915
    "trailing-comma-tuple",              # COM818
    "unnecessary-comprehension",         # C416
    "use-a-generator",                   # C417
    "use-dict-literal",                  # C406
    "use-list-literal",                  # C405
    "useless-object-inheritance",        # UP004
    "useless-return",                    # PLR1711

    # Handled by mypy
    # Ref: <https://github.com/antonagestam/pylint-mypy-overlap>
    "abstract-class-instantiated",
    "arguments-differ",
    "assigning-non-slot",
    "assignment-from-no-return",
    "assignment-from-none",
    "bad-exception-cause",
    "bad-format-character",
    "bad-reversed-sequence",
    "bad-super-call",
    "bad-thread-instantiation",
    "catching-non-exception",
    "comparison-with-callable",
    "deprecated-class",
    "dict-iter-missing-items",
    "format-combined-specification",
    "global-variable-undefined",
    "import-error",
    "inconsistent-mro",
    "inherit-non-class",
    "init-is-generator",
    "invalid-class-object",
    "invalid-enum-extension",
    "invalid-envvar-value",
    "invalid-format-returned",
    "invalid-hash-returned",
    "invalid-metaclass",
    "invalid-overridden-method",
    "invalid-repr-returned",
    "invalid-sequence-index",
    "invalid-slice-index",
    "invalid-slots-object",
    "invalid-slots",
    "invalid-star-assignment-target",
    "invalid-str-returned",
    "invalid-unary-operand-type",
    "invalid-unicode-codec",
    "isinstance-second-argument-not-valid-type",
    "method-hidden",
    "misplaced-format-function",
    "missing-format-argument-key",
    "missing-format-attribute",
    "missing-kwoa",
    "no-member",
    "no-value-for-parameter",
    "non-iterator-returned",
    "non-str-assignment-to-dunder-name",
    "nonlocal-and-global",
    "not-a-mapping",
    "not-an-iterable",
    "not-async-context-manager",
    "not-callable",
    "not-context-manager",
    "overridden-final-method",
    "raising-bad-type",
    "raising-non-exception",
    "redundant-keyword-arg",
    "relative-beyond-top-level",
    "self-cls-assignment",
    "signature-differs",
    "star-needs-assignment-target",
    "subclassed-final-class",
    "super-without-brackets",
    "too-many-function-args",
    "typevar-double-variance",
    "typevar-name-mismatch",
    "unbalanced-dict-unpacking",
    "unbalanced-tuple-unpacking",
    "unexpected-keyword-arg",
    "unhashable-member",
    "unpacking-non-sequence",
    "unsubscriptable-object",
    "unsupported-assignment-operation",
    "unsupported-binary-operation",
    "unsupported-delete-operation",
    "unsupported-membership-test",
    "used-before-assignment",
    "using-final-decorator-in-unsupported-version",
    "wrong-exception-operation",
]

enable = [
    #"useless-suppression",  # temporarily every now and then to clean them up
    "use-symbolic-message-instead",
]

[tool.pylint.BASIC]
docstring-min-length = 5
bad-names = "foo,bar,baz,toto,tutu,tata,tmp,test"
good-names = "f,i,j,k,db,ex,Run,_,__"
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__)|log|urlpatterns)$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
function-rgx = "([a-z_][a-z0-9_]{2,40}|test_[a-z0-9_]+)$"
method-rgx = '([a-z_][a-z0-9_]{2,40}|setUp|set[Uu]pClass|tearDown|tear[Dd]ownClass|assert[A-Z]\w*|maxDiff|test_[a-z0-9_]+)$'
attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
variable-rgx = "[a-z_][a-z0-9_]{2,30}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"
inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
no-docstring-rgx = "__.*__$|test_.+|setUp$|setUpClass$|tearDown$|tearDownClass$|Meta$"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
include-naming-hint = "yes"
inlinevar-naming-style = "snake_case"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
variable-naming-style = "snake_case"
[tool.pylint.MISCELLANEOUS]
notes = "FIXME,XXX,TODO"

[tool.pylint.SIMILARITIES]
min-similarity-lines = 4
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "no"

[tool.pylint.CLASSES]
defining-attr-methods = "__init__,__new__,setUp"
valid-classmethod-first-arg = "cls"
valid-metaclass-classmethod-first-arg = "mcs"

[tool.pylint.DESIGN]
max-args = 5
ignored-argument-names = "_.*"
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 7
min-public-methods = 2
max-public-methods = 20

[tool.ruff]
target-version = "py310"

# https://beta.ruff.rs/docs/rules/
select = [
    "B002",    # Python does not support the unary prefix increment
    "B007",    # Loop control variable {name} not used within loop body
    "B014",    # Exception handler with duplicate exception
    "B023",    # Function definition does not bind loop variable {name}
    "B026",    # Star-arg unpacking after a keyword argument is strongly discouraged
    "C",       # complexity
    "COM818",  # Trailing comma on bare tuple prohibited
    "D",       # docstrings
    "E",       # pycodestyle
    "F",       # pyflakes/autoflake
    "G",       # flake8-logging-format
    "I",       # isort
    "ICN001",  # import concentions; {name} should be imported as {asname}
    "ISC001",  # Implicitly concatenated string literals on one line
    "N804",    # First argument of a class method should be named cls
    "N805",    # First argument of a method should be named self
    "N815",    # Variable {name} in class scope should not be mixedCase
    "PGH001",  # No builtin eval() allowed
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "PLC",     # pylint
    "PLE",     # pylint
    "PLR",     # pylint
    "PLW",     # pylint
    "Q000",    # Double quotes found but single quotes preferred
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "S102",    # Use of exec detected
    "S103",    # bad-file-permissions
    "S108",    # hardcoded-temp-file
    "S306",    # suspicious-mktemp-usage
    "S307",    # suspicious-eval-usage
    "S313",    # suspicious-xmlc-element-tree-usage
    "S314",    # suspicious-xml-element-tree-usage
    "S315",    # suspicious-xml-expat-reader-usage
    "S316",    # suspicious-xml-expat-builder-usage
    "S317",    # suspicious-xml-sax-usage
    "S318",    # suspicious-xml-mini-dom-usage
    "S319",    # suspicious-xml-pull-dom-usage
    "S320",    # suspicious-xmle-tree-usage
    "S601",    # paramiko-call
    "S602",    # subprocess-popen-with-shell-equals-true
    "S604",    # call-with-shell-equals-true
    "S608",    # hardcoded-sql-expression
    "S609",    # unix-command-wildcard-injection
    "SIM105",  # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117",  # Merge with-statements that use the same scope
    "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201",  # Use {left} != {right} instead of not {left} == {right}
    "SIM208",  # Use {expr} instead of not (not {expr})
    "SIM212",  # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300",  # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401",  # Use get from dict with default instead of an if block
    "T100",    # Trace found: {name} used
    "T20",     # flake8-print
    "TID251",  # Banned imports
    "TRY004",  # Prefer TypeError exception for invalid type
    "TRY200",  # Use raise from to specify exception cause
    "TRY302",  # Remove exception handler; error is immediately re-raised
    "UP",      # pyupgrade
    "W",       # pycodestyle
]

ignore = [
    "D100",    # Ignore missing docstring in public module
    "D101",    # Ignore missing docstring in public class
    "D102",    # Ignore missing docstring in public method
    "D103",    # Ignore missing docstring in public function
    "D202",    # No blank lines allowed after function docstring
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "D406",    # Section name should end with a newline
    "D407",    # Section name underlining
    "E501",    # line too long
    "E731",    # do not assign a lambda expression, use a def
    "PLC1901", # Lots of false positives
    # False positives https://github.com/astral-sh/ruff/issues/5386
    "PLC0208", # Use a sequence type instead of a `set` when iterating over values
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "UP006",   # keep type annotation style as is
    "UP007",   # keep type annotation style as is
    # Ignored due to performance: https://github.com/charliermarsh/ruff/issues/2923
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
]

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = []
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.mccabe]
max-complexity = 25
